Company Name and Logo alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -642,10 +642,14 @@ button.btn:hover {
         width: 80%;
         .logo, .companyname {
             display: inline-block;
+            vertical-align: middle;
         }
         .logo {
             margin-right: 5px;
             vertical-align: middle;
+            img, .logo, & {
+                line-height: 0;
+            }
         }
         .companyname {
             padding: 0.6em 0;
